--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8">
         <title>GeoNode</title>
-        <link rel="shortcut icon" href="static/img/favicon.ico" />
-        <link rel="apple-touch-icon" href="static/img/appletouchicon.png" />
+        <!-- <link rel="shortcut icon" href="static/img/favicon.ico" />
+        <link rel="apple-touch-icon" href="static/img/appletouchicon.png" /> -->
         <meta name='description' content='GeoNode'/>
         <meta name='keywords' content='GeoNode'/>
-        <link rel='stylesheet' href='static/css/style.css' type='text/css' media='all' />
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+        <link rel='stylesheet' href='static/css/site.css' type='text/css' media='all' />
         <!-- HTML5 shim, for IE6-8 support of HTML elements -->
         <!--[if lt IE 9]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,12 +17,16 @@
     </head>
     <body>
         <header class="main">
-            <div class="navbar">
-                <div class="navbar-inner">
-                    <div class="container">
+            <div class="container">
+                <div class="row">
+                    <div class="span6">
                         <h1><a class="brand" href="#">GeoNode</a></h1>
-                        <a href="#" class="btn btn-success">Get GeoNode Now</a>
-                        <a href="#" class="btn btn-warning">Try the Demo</a>
+                    </div>
+                    <div class="span6">
+                        <div class="pull-right">
+                            <a href="#" class="btn btn-success">Get GeoNode Now</a>
+                            <a href="#" class="btn btn-warning">Try the Demo</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -30,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1>Content management of geospatial data</h1>
+                        <h1>Content management<br /> of geospatial data</h1>
                         <p>GeoNode brings together mature and stable open-source
                         software projects under a consistent and easy-to-use interface
                         allowing users, with little training, to quickly and easily share
@@ -40,7 +45,7 @@
                         <a href="#" class="btn btn-large btn-success">Get GeoNode Now</a>
                     </div>
                     <div class="span6">
-
+                        <img src="static/img/hero_img.png" width="560" height="325" alt="" class="hero-img" />
                     </div>
                 </div>
             </div>
@@ -49,7 +54,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span4">
-                        <div class="box">
+                        <div class="box box-users">
                             <header class="box-header">
                                 <h2>For Users</h2>
                             </header>
@@ -64,7 +69,7 @@
                         </div>
                     </div>
                     <div class="span4">
-                        <div class="box">
+                        <div class="box box-devs">
                             <header class="box-header">
                                 <h2>For Developers</h2>
                             </header>
@@ -78,7 +83,7 @@
                         </div>
                     </div>
                     <div class="span4">
-                        <div class="box">
+                        <div class="box box-admins">
                             <header class="box-header">
                                 <h2>For Admins</h2>
                             </header>
@@ -94,27 +99,27 @@
                 </div>
             </div>
         </section>
-        <section class="footer">
+        <footer class="footer">
             <div class="container">
                 <section class="important-links">
                     <div class="row">
                         <div class="span1">
-                            <h2>Quick Start</h2>
+                            <h2 class="quick-start">Quick Start</h2>
                         </div>
                         <div class="span5">
-                            <article>
+                            <article class="documentation">
                                 <h3><a href="#">Documentation</a></h3>
                                 <p>Lorem ipsum dolor sit amet, co
                                 nsectetur adipisicing elit, sed
                                 do eiusmod tempor.</p>
                             </article>
-                            <article>
+                            <article class="mailing-list">
                                 <h3><a href="#">Mailing List</a></h3>
                                 <p>Lorem ipsum dolor sit amet, co
                                 nsectetur adipisicing elit, sed
                                 do eiusmod tempor.</p>
                             </article>
-                            <article>
+                            <article class="issue-tracker">
                                 <h3><a href="#">Issue Tracker</a></h3>
                                 <p>Lorem ipsum dolor sit amet, co
                                 nsectetur adipisicing elit, sed
@@ -122,19 +127,19 @@
                             </article>
                         </div>
                         <div class="span5">
-                            <article>
+                            <article class="faqs">
                                 <h3><a href="#">FAQs</a></h3>
                                 <p>Lorem ipsum dolor sit amet, co
                                 nsectetur adipisicing elit, sed
                                 do eiusmod tempor.</p>
                             </article>
-                            <article>
+                            <article class="irc">
                                 <h3><a href="#">IRC</a></h3>
                                 <p>Lorem ipsum dolor sit amet, co
                                 nsectetur adipisicing elit, sed
                                 do eiusmod tempor.</p>
                             </article>
-                            <article>
+                            <article class="sites-gallery">
                                 <h3><a href="#">Sites Gallery</a></h3>
                                 <p>Lorem ipsum dolor sit amet, co
                                 nsectetur adipisicing elit, sed
@@ -159,6 +164,6 @@
                     </div>
                 </section>
             </div>
-        </section>
+        </footer>
     </body>
 </html>
