Added link to demo server and updated description

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="span6">
                         <div class="pull-right">
                             <a href="#" class="btn btn-success">Get GeoNode Now</a>
-                            <a href="#" class="btn btn-warning">Try the Demo</a>
+                            <a href="http://demo.geonode.org/" class="btn btn-warning">Try the Demo</a>
                         </div>
                     </div>
                 </div>
@@ -35,13 +35,8 @@
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1>Content management<br /> of geospatial data</h1>
-                        <p>GeoNode brings together mature and stable open-source
-                        software projects under a consistent and easy-to-use interface
-                        allowing users, with little training, to quickly and easily share
-                        data and create interactive maps. GeoNode provides a
-                        cost-effective and scalable tool for developing information
-                        management systems.</p>
+                        <h1>Geospatial Data Management Tool</h1>
+                        <p>GeoNode is an easy and scalable tool for developing geospatial information management systems. It’s also designed to be a flexible platform that software developers can extend or modify to meet particular needs.</p>
                         <a href="#" class="btn btn-large btn-success">Get GeoNode Now</a>
                     </div>
                     <div class="span6">
