Open demo site in a new page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="span6">
                         <div class="pull-right">
                             <a href="#" class="btn btn-success">Get GeoNode Now</a>
-                            <a href="http://demo.geonode.org/" class="btn btn-warning">Try the Demo</a>
+                            <a tager="_blank" href="http://demo.geonode.org/" class="btn btn-warning">Try the Demo</a>
                         </div>
                     </div>
                 </div>
