Several mods (formatting and content) to index.html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1>Geospatial Data Management Tool</h1>
-                        <p>GeoNode is an easy and scalable tool for developing geospatial information management systems. It’s also designed to be a flexible platform that software developers can extend or modify to meet particular needs.</p>
+                        <h1>Geospatial Content Management System</h1>
+                        <p>GeoNode is an flexible and scalable tool for developing 
+                            geospatial information management systems. It’s also 
+                            designed to be a flexible platform that software developers 
+                            can extend or modify to meet particular needs.
+                        </p>
                         <a href="#" class="btn btn-large btn-success">Get GeoNode Now</a>
                     </div>
                     <div class="span6">
@@ -54,12 +58,9 @@
                                 <h2>For Users</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Hierarchical page navigation</li>
-                                <li>Save as draft and preview on site</li>
-                                <li>Scheduled publishing</li>
-                                <li>Drag-and-drop page ordering</li>
-                                <li>WYSIWYG editing</li>
-                                <li>In-line page editing</li>
+                                <li>Browse and Search for Geospatial Data Layers and Services</li>
+                                <li>Upload and share your Geospatial Data</li>
+                                <li>Create and share maps</li>
                             </ul>
                         </div>
                     </div>
@@ -69,9 +70,11 @@
                                 <h2>For Developers</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Custom templates per page or blog post</li>
+                                <li>Open Source</li>
+                                <li>Built on popular and flexible Django framework</li>
+                                <li>Depends on stable, mature open source frameworks</li>
                                 <li>Twitter Bootstrap integration</li>
-                                <li>API for custom content types</li>
+                                <li>APIs for customization and integration</li>
                                 <li>Search engine and API</li>
                                 <li>Seamless integration with third-party Django apps</li>
                             </ul>
@@ -83,11 +86,11 @@
                                 <h2>For Admins</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Custom templates per page or blog post</li>
-                                <li>Twitter Bootstrap integration</li>
-                                <li>API for custom content types</li>
-                                <li>Search engine and API</li>
-                                <li>Seamless integration with third-party Django apps</li>
+                                <li>Open Source</li>
+                                <li>Complete framework for providing OGC Services</li>
+                                <li>Metadata</li>
+                                <li>Security</li>
+                                <li>Scalablity</li>
                             </ul>
                         </div>
                     </div>
@@ -103,42 +106,52 @@
                         </div>
                         <div class="span5">
                             <article class="documentation">
-                                <h3><a href="#">Documentation</a></h3>
-                                <p>Lorem ipsum dolor sit amet, co
-                                nsectetur adipisicing elit, sed
-                                do eiusmod tempor.</p>
+                                <h3><a href="http://docs.geonode.org/en/latest/index.html">Documentation</a></h3>
+                                <p>User, Administrator and Developer Documentation.
+                                </p>
                             </article>
                             <article class="mailing-list">
-                                <h3><a href="#">Mailing List</a></h3>
-                                <p>Lorem ipsum dolor sit amet, co
-                                nsectetur adipisicing elit, sed
-                                do eiusmod tempor.</p>
+                                <h3><a href="#">Mailing Lists</a></h3>
+                                <h4>Users</h4>
+                                <p>Archive</p>
+                                <p>Subscription</p>
+                                <p>Old Archive</p>
+                                <h4>Developers</h4>
+                                <p>Archive</p>
+                                <p>Subscription</p>
                             </article>
                             <article class="issue-tracker">
-                                <h3><a href="#">Issue Tracker</a></h3>
-                                <p>Lorem ipsum dolor sit amet, co
-                                nsectetur adipisicing elit, sed
-                                do eiusmod tempor.</p>
+                                <h3><a href="https://github.com/GeoNode/geonode/issues">Issue Tracker</a></h3>
+                                <p>File a bug report or make a feature 
+                                request on our GitHub issue tracker.
+                                </p>
                             </article>
                         </div>
                         <div class="span5">
-                            <article class="faqs">
-                                <h3><a href="#">FAQs</a></h3>
-                                <p>Lorem ipsum dolor sit amet, co
-                                nsectetur adipisicing elit, sed
-                                do eiusmod tempor.</p>
+                            <article class="wiki">
+                                <h3><a href="https://github.com/geonode/geonode/wiki">WIKI</a></h3>
+                                <p>
+                                </p>
                             </article>
                             <article class="irc">
                                 <h3><a href="#">IRC</a></h3>
-                                <p>Lorem ipsum dolor sit amet, co
-                                nsectetur adipisicing elit, sed
-                                do eiusmod tempor.</p>
+                                <p>The GeoNode community is available on IRC
+                                    for interactive question and answer.  
+                                    You can often find active developers, 
+                                    helpful users, and discussion about current
+                                    development and projects. It can be a useful 
+                                    way to find a quick answer or interact on a
+                                    problem.
+                                </p>
+                                <p>If you are new to IRC, you will need to find an 
+                                    IRC client (Pidgin, mIRC, or even Colloquy on mac).i
+                                </p>
                             </article>
                             <article class="sites-gallery">
                                 <h3><a href="#">Sites Gallery</a></h3>
-                                <p>Lorem ipsum dolor sit amet, co
-                                nsectetur adipisicing elit, sed
-                                do eiusmod tempor.</p>
+                                <p>A selection of sites implemented with GeoNode,
+                                    and downstream projects.
+                                </p>
                             </article>
                         </div>
                     </div>
@@ -146,14 +159,13 @@
                 <section class="btm">
                     <div class="row">
                         <div class="span6">
-                            <p>Copyright 2012. GeoNode. Designed by <a href="#">Spatial Dev</a>.</p>
+                            <p>CC by SA 2012. GeoNode. Designed by <a href="http://www.spatialdev.com/">Spatial Dev</a>.</p>
                         </div>
                         <div class="span6">
                             <div class="pull-right social">
                                 <a href="#" class="fb">Facebook</a>
                                 <a href="#" class="tw">Twitter</a>
-                                <a href="#" class="in">LinkedIn</a>
-                                <a href="#" class="bl">Blogger</a>
+                                <a href="#" class="gp">Google+</a>
                             </div>
                         </div>
                     </div>
