Replace wiki with faqs icon

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             </article>
                         </div>
                         <div class="span5">
-                            <article class="wiki">
+                            <article class="faqs">
                                 <h3><a href="https://github.com/geonode/geonode/wiki">WIKI</a></h3>
                                 <p>
                                 </p>
