Edit developers section

--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
                                 <h2>For Developers</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Open Source</li>
-                                <li>Built on popular and flexible Django framework</li>
-                                <li>Depends on stable, mature open source frameworks</li>
+                                <li>Developed with Django framework</li>
+                                <li>Built on stable, mature open source frameworks</li>
                                 <li>Twitter Bootstrap integration</li>
-                                <li>APIs for customization and integration</li>
-                                <li>Search engine and API</li>
+                                <li>Multiple APIs for customization and integration</li>
                                 <li>Seamless integration with third-party Django apps</li>
                             </ul>
                         </div>
@@ -86,7 +84,6 @@
                                 <h2>For Admins</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Open Source</li>
                                 <li>Complete framework for providing OGC Services</li>
                                 <li>Metadata</li>
                                 <li>Security</li>
