Edit users section

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                                 <h2>For Users</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Browse and Search for Geospatial Data Layers and Services</li>
-                                <li>Upload and share your Geospatial Data</li>
-                                <li>Create and share maps</li>
+                                <li>Browse and Search for Geospatial Data Layers and Web Services</li>
+                                <li>Upload manage and share your own Geospatial Data</li>
+                                <li>Create and share interactive maps</li>
+                                <li>Collaborate with others using layers and maps.</li>
                             </ul>
                         </div>
                     </div>
