Edit admin section

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                                 <h2>For Admins</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Complete framework for providing OGC Services</li>
-                                <li>Metadata</li>
-                                <li>Security</li>
-                                <li>Scalablity</li>
+                                <li>Complete framework for providing OGC Compliant GeoSpatial Web Services</li>
+                                <li>Complete Metadata Managment Platform</li>
+                                <li>Comprehensive Security Model and Framework</li>
+                                <li>Reliable and Scalable platform for Deploying Spatial Data Infrastructure</li>
                             </ul>
                         </div>
                     </div>
