Edit admin section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             </header>
                             <ul class="unstyled">
                                 <li>Complete framework for providing OGC Compliant GeoSpatial Web Services</li>
-                                <li>Complete Metadata Managment Platform</li>
+                                <li>Complete Metadata Managment and Aggregation Platform</li>
                                 <li>Comprehensive Security Model and Framework</li>
                                 <li>Reliable and Scalable platform for Deploying Spatial Data Infrastructure</li>
                             </ul>
