--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                                 <h2>For Users</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Browse and Search for Geospatial Data Layers and Web Services</li>
-                                <li>Upload manage and share your own Geospatial Data</li>
+                                <li>Browse and search for geospatial data layers and web services</li>
+                                <li>Upload manage and share your own geospatial data</li>
                                 <li>Create and share interactive maps</li>
                                 <li>Collaborate with others using layers and maps.</li>
                             </ul>
@@ -71,11 +71,11 @@
                                 <h2>For Developers</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Developed with Django framework</li>
-                                <li>Built on stable, mature open source frameworks</li>
-                                <li>Twitter Bootstrap integration</li>
+                                <li>Developed with django framework</li>
+                                <li>Built on stable, mature open source geospatial frameworks</li>
+                                <li>Twitter bootstrap integration</li>
                                 <li>Multiple APIs for customization and integration</li>
-                                <li>Seamless integration with third-party Django apps</li>
+                                <li>Seamless integration with third-party django apps</li>
                             </ul>
                         </div>
                     </div>
@@ -85,10 +85,10 @@
                                 <h2>For Admins</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Complete framework for providing OGC Compliant GeoSpatial Web Services</li>
-                                <li>Complete Metadata Managment and Aggregation Platform</li>
-                                <li>Comprehensive Security Model and Framework</li>
-                                <li>Reliable and Scalable platform for Deploying Spatial Data Infrastructure</li>
+                                <li>Complete framework for providing OGC compliant geospatial web services</li>
+                                <li>Complete metadata managment and aggregation platform</li>
+                                <li>Comprehensive security model and framework</li>
+                                <li>Reliable and scalable platform for deploying spatial data infrastructure</li>
                             </ul>
                         </div>
                     </div>
