--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="span6">
                         <div class="pull-right">
-                            <a href="#" class="btn btn-success">Get GeoNode Now</a>
+                            <a href="https://github.com/GeoNode/geonode/blob/dev/README" class="btn btn-success">Install GeoNode Now</a>
                             <a target="_blank" href="http://demo.geonode.org/" class="btn btn-warning">Try the Demo</a>
                         </div>
                     </div>
