Comment out main CTA

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             designed to be a flexible platform that software developers 
                             can extend or modify to meet particular needs.
                         </p>
-                        <a href="#" class="btn btn-large btn-success">Get GeoNode Now</a>
+                        <!--<a href="#" class="btn btn-large btn-success">GeoNode Now</a>-->
                     </div>
                     <div class="span6">
                         <img src="static/img/hero_img.png" width="560" height="325" alt="" class="hero-img" />
