--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="span6">
                         <div class="pull-right">
                             <a href="https://github.com/GeoNode/geonode/blob/dev/README" class="btn btn-success">Install GeoNode Now</a>
-                            <a target="_blank" href="http://demo.geonode.org/" class="btn btn-warning">Try the Demo</a>
+                            <a target="_blank" href="http://ui.dev.geonode.org/" class="btn btn-warning">Try the Demo</a>
                         </div>
                     </div>
                 </div>
