Some minor edits

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                                 <h2>For Admins</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Complete framework for providing OGC compliant geospatial web services</li>
-                                <li>Complete metadata managment and aggregation platform</li>
-                                <li>Comprehensive security model and framework</li>
-                                <li>Reliable and scalable platform for deploying spatial data infrastructure</li>
+                                <li>Complete framework for OGC compliant geospatial web services</li>
+                                <li>Interoperable metadata managment and aggregation platform</li>
+                                <li>Comprehensive security model & framework</li>
+                                <li>Reliable & scalable platform for deploying spatial data infrastructure</li>
                             </ul>
                         </div>
                     </div>
