Change mailing list link

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <h3><a href="http://docs.geonode.org/en/latest/index.html">Documentation</a></h3>
                             </article>
                             <article class="mailing-list">
-                                <h3><a href="#">Mailing Lists</a></h3>
+                                <h3><a href="http://geonode.org/communication/">Mailing Lists</a></h3>
                             </article>
                             <article class="issue-tracker">
                                 <h3><a href="https://github.com/GeoNode/geonode/issues">Issue Tracker</a></h3>
