Test middle section heading link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="span4">
                         <div class="box box-devs">
                             <header class="box-header">
-                                <h2>For Developers</h2>
+                                <h2><a href="http://geonode.org/for-developers/">For Developers</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Developed with django framework</li>
