--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1>Geospatial Content Management System</h1>
+                        <h1>Open Source Geospatial Content Management System</h1>
                         <p>GeoNode is an flexible and scalable tool for developing 
                             geospatial information management systems. It’s also 
                             designed to be a flexible platform that software developers 
