Edit main text body

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <div class="span6">
                         <h1>Open Source Geospatial Content Management System</h1>
                         <p>GeoNode is an flexible and scalable tool for developing 
-                            geospatial information management systems and deploying
-                            spatial data infrastructure. It is also 
+                            Geospatial Information Management systems and for deploying
+                            Interoperable Spatial Data Infrastructure. It is also 
                             designed to be a flexible platform that software developers 
                             can extend or modify to meet particular needs.
                         </p>
