Edit main text body

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
                 <div class="row">
                     <div class="span6">
                         <h1>Open Source Geospatial Content Management System</h1>
-                        <p>GeoNode is an flexible and scalable tool for developing 
-                            Geospatial Information Management systems and for deploying
-                            Interoperable Spatial Data Infrastructure. It is also 
-                            designed to be a flexible platform that software developers 
-                            can extend or modify to meet particular needs.
+                        <p>GeoNode is an application and platform for developing 
+                            user friendly web based Geospatial Information Management 
+                            systems and for deploying interoperable Spatial Data Infrastructure. 
+                            It is also designed to be a flexible platform that software 
+                            developers can extend or modify to meet particular needs in 
+                            their own applications.
                         </p>
                         <!--<a href="#" class="btn btn-large btn-success">GeoNode Now</a>-->
                     </div>
