--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                                 </p>
                             </article>
                             <article class="irc">
-                                <h3><a href="#">IRC</a></h3>
+                                <h3><a href="http://webchat.freenode.net/?channels=#geonode">IRC</a></h3>
                             </article>
                             <article class="sites-gallery">
-                                <h3><a href="#">Sites Gallery</a></h3>
+                                <h3><a href="http://geonode.org/gallery/">Sites Gallery</a></h3>
                             </article>
                         </div>
                     </div>
@@ -133,13 +133,13 @@
                 <section class="btm">
                     <div class="row">
                         <div class="span6">
-                            <p>CC by SA 2012. GeoNode. Designed by <a href="http://www.spatialdev.com/">Spatial Dev</a>.</p>
+                            <p><a href='http://creativecommons.org/licenses/by-sa/2.0/'>CC by SA 2012. GeoNode Contributors.</a> Designed by <a href="http://www.spatialdev.com/">Spatial Dev</a>.</p>
                         </div>
                         <div class="span6">
                             <div class="pull-right social">
-                                <a href="#" class="fb">Facebook</a>
-                                <a href="#" class="tw">Twitter</a>
-                                <a href="#" class="gp">Google+</a>
+                                <a href="http://github.com/geonode/" class="fb">GitHub</a>
+                                <a href="https://twitter.com/GeoNode" class="tw">Twitter</a>
+                                <a href="https://plus.google.com/u/1/b/100587124776656797019/" class="gp">Google+</a>
                             </div>
                         </div>
                     </div>
