Edit license in footer

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <section class="btm">
                     <div class="row">
                         <div class="span6">
-                            <p><a href='http://creativecommons.org/licenses/by-sa/2.0/'>CC by SA 2012. GeoNode Contributors.</a> Designed by <a href="http://www.spatialdev.com/">Spatial Dev</a>.</p>
+ k                           <p>This <a href="http://github.com/geonode/geonode.github.com/">Website</a> is <a href='http://creativecommons.org/licenses/by-sa/2.0/'>CC by SA 2012. GeoNode Contributors.</a> Designed by <a href="http://www.spatialdev.com/">Spatial Dev</a></p>
                         </div>
                         <div class="span6">
                             <div class="pull-right social">
