Add take a tour link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     </div>
                     <div class="span6">
                         <div class="pull-right">
+                            <a href="#" class="btn btn-success">Take a Tour</a>
                             <a href="https://github.com/GeoNode/geonode/blob/dev/README" class="btn btn-success">Install GeoNode Now</a>
                             <a target="_blank" href="http://ui.dev.geonode.org/" class="btn btn-warning">Try the Demo</a>
                         </div>
