Edit main body text

--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
                     <div class="span6">
                         <h1>Open Source Geospatial Content Management System</h1>
                         <p>GeoNode is an application and platform for developing 
-                            user centric, web based Geospatial Information Management 
-                            systems and for deploying interoperable Spatial Data Infrastructure. 
+                            user centric, web based Geospatial Information
+                            Systems and for deploying interoperable Spatial 
+                            Data Infrastructure.
                         </p>
                         <p>
                             It is also designed to be a flexible platform that software 
-                            developers can extend, modify or integrate, to meet particular 
-                            needs in their own applications.
+                            developers can extend, modify or integrate against to meet 
+                            requirements in their own applications.
                         </p>
                         <!--<a href="#" class="btn btn-large btn-success">GeoNode Now</a>-->
                     </div>
