Edit main body text

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="row">
                     <div class="span6">
                         <h1>Open Source Geospatial Content Management System</h1>
-                        <p>GeoNode is an application and platform for developing 
-                            user centric, web based Geospatial Information
+                        <p>GeoNode is an easy to use application and platform 
+                            for developing web based Geospatial Information
                             Systems and for deploying interoperable Spatial 
                             Data Infrastructure.
                         </p>
