Edit middle bullets

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                                 <h2>For Developers</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Developed with django framework</li>
-                                <li>Built on stable, mature open source geospatial frameworks</li>
-                                <li>Twitter bootstrap integration</li>
+                                <li>Developed with django</li>
+                                <li>Built on stable, mature open source geospatial projects</li>
+                                <li>Twitter bootstrap and jquery client implementation</li>
                                 <li>Multiple APIs for customization and integration</li>
                                 <li>Seamless integration with third-party django apps</li>
                             </ul>
@@ -92,8 +92,8 @@
                             <ul class="unstyled">
                                 <li>Complete framework for OGC compliant geospatial web services</li>
                                 <li>Interoperable metadata managment and aggregation platform</li>
-                                <li>Comprehensive security model & framework</li>
-                                <li>Reliable & scalable platform for deploying spatial data infrastructure</li>
+                                <li>Comprehensive security model and framework</li>
+                                <li>Reliable and scalable platform for deploying spatial data infrastructure</li>
                             </ul>
                         </div>
                     </div>
