--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                             </header>
                             <ul class="unstyled">
                                 <li>Browse and search for geospatial data layers and web services</li>
-                                <li>Upload manage and share your own geospatial data</li>
+                                <li>Upload, manage and share your own geospatial data</li>
                                 <li>Create and share interactive maps</li>
-                                <li>Collaborate with others using layers and maps.</li>
+                                <li>Collaborate with others using layers and maps</li>
                             </ul>
                         </div>
                     </div>
@@ -76,11 +76,11 @@
                                 <h2>For Developers</h2>
                             </header>
                             <ul class="unstyled">
-                                <li>Developed with django</li>
+                                <li>Developed with Django</li>
                                 <li>Built on stable, mature open source geospatial projects</li>
-                                <li>Twitter bootstrap and jquery client implementation</li>
+                                <li>Twitter Bootstrap and jQuery client implementation</li>
                                 <li>Multiple APIs for customization and integration</li>
-                                <li>Seamless integration with third-party django apps</li>
+                                <li>Seamless integration with third-party Django apps</li>
                             </ul>
                         </div>
                     </div>
