--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <h1><a class="brand" href="#">GeoNode</a></h1>
                     </div>
                     <div class="span6">
-                        <div class="pull-right">
+                        <div>
                             <a href="https://github.com/GeoNode/geonode/blob/dev/README" class="btn btn-success">Install GeoNode Now</a>
                             <a target="_blank" href="http://ui.dev.geonode.org/" class="btn btn-warning">Try the Demo</a>
                         </div>
@@ -110,25 +110,29 @@
                         <div class="span5">
                             <article class="documentation">
                                 <h3><a href="http://docs.geonode.org/en/latest/index.html">Documentation</a></h3>
+                                <p>User, Developer and Administrator Guides.</p>
                             </article>
                             <article class="mailing-list">
                                 <h3><a href="http://geonode.org/communication/">Mailing Lists</a></h3>
+                                <p>User, Developer and Regional lists and archives.</p>
                             </article>
                             <article class="issue-tracker">
                                 <h3><a href="https://github.com/GeoNode/geonode/issues">Issue Tracker</a></h3>
+                                <p>Bugs, Feature Requests, Milestones and Roadmap.</p>
                             </article>
                         </div>
                         <div class="span5">
                             <article class="faqs">
-                                <h3><a href="https://github.com/geonode/geonode/wiki">WIKI</a></h3>
-                                <p>
-                                </p>
+                                <h3><a href="https://github.com/geonode/geonode/wiki">FAQs</a></h3>
+                                <p>Frequently Asked Questions about GeoNode.</p>
                             </article>
                             <article class="irc">
                                 <h3><a href="http://webchat.freenode.net/?channels=#geonode">IRC</a></h3>
+                                <p>#geonode on freenode.net Real-time discussion and help.</p>
                             </article>
                             <article class="sites-gallery">
                                 <h3><a href="http://geonode.org/gallery/">Sites Gallery</a></h3>
+                                <p>A collection of sites implemented using GeoNode</p>
                             </article>
                         </div>
                     </div>
