--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8">
         <title>GeoNode</title>
-        <!-- <link rel="shortcut icon" href="static/img/favicon.ico" />
-        <link rel="apple-touch-icon" href="static/img/appletouchicon.png" /> -->
+        <link rel="shortcut icon" href="static/img/favicon.ico" />
         <meta name='description' content='GeoNode'/>
         <meta name='keywords' content='GeoNode'/>
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
@@ -36,14 +35,14 @@
                 <div class="row">
                     <div class="span6">
                         <h1>Open Source Geospatial Content Management System</h1>
-                        <p>GeoNode is an easy to use application and platform 
+                        <p>GeoNode is an easy to use application and platform
                             for developing web based Geospatial Information
-                            Systems and for deploying interoperable Spatial 
+                            Systems and for deploying interoperable Spatial
                             Data Infrastructure.
                         </p>
                         <p>
-                            It is also designed to be a flexible platform that software 
-                            developers can extend, modify or integrate against to meet 
+                            It is also designed to be a flexible platform that software
+                            developers can extend, modify or integrate against to meet
                             requirements in their own applications.
                         </p>
                         <!--<a href="#" class="btn btn-large btn-success">GeoNode Now</a>-->
@@ -60,7 +59,7 @@
                     <div class="span4">
                         <div class="box box-users">
                             <header class="box-header">
-                                <h2>For Users</h2>
+                                <h2><a href="#">For Users</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Browse and search for geospatial data layers and web services</li>
@@ -73,7 +72,7 @@
                     <div class="span4">
                         <div class="box box-devs">
                             <header class="box-header">
-                                <h2>For Developers</h2>
+                                <h2><a href="#">For Developers</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Developed with Django</li>
@@ -87,7 +86,7 @@
                     <div class="span4">
                         <div class="box box-admins">
                             <header class="box-header">
-                                <h2>For Admins</h2>
+                                <h2><a href="#">For Admins</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Complete framework for OGC compliant geospatial web services</li>
@@ -107,33 +106,64 @@
                         <div class="span1">
                             <h2 class="quick-start">Quick Start</h2>
                         </div>
-                        <div class="span5">
-                            <article class="documentation">
-                                <h3><a href="http://docs.geonode.org/en/latest/index.html">Documentation</a></h3>
-                                <p>User, Developer and Administrator Guides.</p>
-                            </article>
-                            <article class="mailing-list">
-                                <h3><a href="http://geonode.org/communication/">Mailing Lists</a></h3>
-                                <p>User, Developer and Regional lists and archives.</p>
-                            </article>
-                            <article class="issue-tracker">
-                                <h3><a href="https://github.com/GeoNode/geonode/issues">Issue Tracker</a></h3>
-                                <p>Bugs, Feature Requests, Milestones and Roadmap.</p>
-                            </article>
-                        </div>
-                        <div class="span5">
-                            <article class="faqs">
-                                <h3><a href="https://github.com/geonode/geonode/wiki">FAQs</a></h3>
-                                <p>Frequently Asked Questions about GeoNode.</p>
-                            </article>
-                            <article class="irc">
-                                <h3><a href="http://webchat.freenode.net/?channels=#geonode">IRC</a></h3>
-                                <p>#geonode on freenode.net Real-time discussion and help.</p>
-                            </article>
-                            <article class="sites-gallery">
-                                <h3><a href="http://geonode.org/gallery/">Sites Gallery</a></h3>
-                                <p>A collection of sites implemented using GeoNode</p>
-                            </article>
+                        <div class="span11">
+                                    <div class="get-started">
+                                        <h2>Get Started Now</h2>
+                                        <ul class="unstyled steps">
+                                            <li>
+                                                <div class="num">1</div>
+                                                <h6>Install from PyPI</h6>
+                                                <span>$ pip install mezzanine</span>
+                                            </li>
+                                            <li>
+                                                <div class="num">2</div>
+                                                <h6>Create a project</h6>
+                                                <span>$ mezanine-project myproject<br />
+                                                    $ cd myproject</span>
+                                            </li>
+                                            <li>
+                                                <div class="num">3</div>
+                                                <h6>Create a database</h6>
+                                                <span>$ python manage.py createdb</span>
+                                            </li>
+                                            <li class="last">
+                                                <div class="num">4</div>
+                                                <h6>Run the web server</h6>
+                                                <span>$ python manage.py runserver</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+
+                            <div class="row">
+                                <div class="span5">
+                                    <article class="documentation">
+                                        <h3><a href="http://docs.geonode.org/en/latest/index.html">Documentation</a></h3>
+                                        <p>User, Developer and Administrator Guides.</p>
+                                    </article>
+                                    <article class="mailing-list">
+                                        <h3><a href="http://geonode.org/communication/">Mailing Lists</a></h3>
+                                        <p>User, Developer and Regional lists and archives.</p>
+                                    </article>
+                                    <article class="issue-tracker">
+                                        <h3><a href="https://github.com/GeoNode/geonode/issues">Issue Tracker</a></h3>
+                                        <p>Bugs, Feature Requests, Milestones and Roadmap.</p>
+                                    </article>
+                                </div>
+                                <div class="span5">
+                                    <article class="faqs">
+                                        <h3><a href="https://github.com/geonode/geonode/wiki">FAQs</a></h3>
+                                        <p>Frequently Asked Questions about GeoNode.</p>
+                                    </article>
+                                    <article class="irc">
+                                        <h3><a href="http://webchat.freenode.net/?channels=#geonode">IRC</a></h3>
+                                        <p>#geonode on freenode.net Real-time discussion and help.</p>
+                                    </article>
+                                    <article class="sites-gallery">
+                                        <h3><a href="http://geonode.org/gallery/">Sites Gallery</a></h3>
+                                        <p>A collection of sites implemented using GeoNode</p>
+                                    </article>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -144,9 +174,9 @@
                         </div>
                         <div class="span6">
                             <div class="pull-right social">
-                                <a href="http://github.com/geonode/" class="fb">GitHub</a>
-                                <a href="https://twitter.com/GeoNode" class="tw">Twitter</a>
-                                <a href="https://plus.google.com/u/1/b/100587124776656797019/" class="gp">Google+</a>
+                                <a href="http://github.com/geonode/" class="gh" target="_blank">GitHub</a>
+                                <a href="https://twitter.com/GeoNode" class="tw" target="_blank">Twitter</a>
+                                <a href="https://plus.google.com/u/1/b/100587124776656797019/" class="gp" target="_blank">Google+</a>
                             </div>
                         </div>
                     </div>
