Remove references to mezzanine, still a bit inaccurate

--- a/index.html
+++ b/index.html
@@ -113,23 +113,23 @@
                                             <li>
                                                 <div class="num">1</div>
                                                 <h6>Install from PyPI</h6>
-                                                <span>$ pip install mezzanine</span>
+                                                <span>$ pip install geonode</span>
                                             </li>
                                             <li>
                                                 <div class="num">2</div>
                                                 <h6>Create a project</h6>
-                                                <span>$ mezanine-project myproject<br />
+                                                <span>$ geonode-project myproject<br />
                                                     $ cd myproject</span>
                                             </li>
                                             <li>
                                                 <div class="num">3</div>
-                                                <h6>Create a database</h6>
-                                                <span>$ python manage.py createdb</span>
+                                                <h6>Setup the environment</h6>
+                                                <span>$ paver setup</span>
                                             </li>
                                             <li class="last">
                                                 <div class="num">4</div>
-                                                <h6>Run the web server</h6>
-                                                <span>$ python manage.py runserver</span>
+                                                <h6>Run the dev server</h6>
+                                                <span>$ paver start</span>
                                             </li>
                                         </ul>
                                     </div>
