Added instruction to read the docs.

--- a/index.html
+++ b/index.html
@@ -117,11 +117,16 @@
                                                 <span>$ sudo apt-get update</span>
                                                 <span>$ sudo apt-get install geonode</span>
                                             </li>
-                                            <li class="last">
+                                            <li>
                                                 <div class="num">2</div>
                                                 <h6>Set the IP address and create a superuser</h6>
                                                 <span>$ sudo geonode-updateip 127.0.0.1</span>
                                                 <span>$ geonode createsuperuser</span>
+                                            </li>
+                                            <li class="last">
+                                                <div class="num">3</div>
+                                                <h6>Read the admin docs</h6>
+                                                <span>http://docs.geonode.org/#for-administrators</span>
                                             </li>
                                         </ul>
                                     </div>
