--- a/index.html
+++ b/index.html
@@ -113,20 +113,33 @@
                                             <li>
                                                 <div class="num">1</div>
                                                 <h6>Install from PPA in Ubuntu 12.04</h6>
-                                                <span>$ sudo add-apt-repository ppa:geonode/snapshots</span>
-                                                <span>$ sudo apt-get update</span>
-                                                <span>$ sudo apt-get install geonode</span>
+                                                <span>
+                                                <p>$ sudo add-apt-repository ppa:geonode/snapshots</p>
+                                                <p>$ sudo apt-get update</p>
+                                                <p>$ sudo apt-get install geonode</p>
+                                                </span>
                                             </li>
                                             <li>
                                                 <div class="num">2</div>
                                                 <h6>Set the IP address and create a superuser</h6>
-                                                <span>$ sudo geonode-updateip 127.0.0.1</span>
-                                                <span>$ geonode createsuperuser</span>
+                                                <span>
+                                                <p>$ sudo geonode-updateip 127.0.0.1</p>
+                                                <p>$ geonode createsuperuser</p>
+                                                </span>
+                                            </li>
+                                            <li class="num">
+                                                <div class="num">3</div>
+                                                <h6>Read the admin docs</h6>
+                                                <span>
+                                                <p><a href='http://docs.geonode.org/#for-administrators'>Start Here</a></p>
+                                                </span>
                                             </li>
                                             <li class="last">
                                                 <div class="num">3</div>
-                                                <h6>Read the admin docs</h6>
-                                                <span>http://docs.geonode.org/#for-administrators</span>
+                                                <h6>Import your data</h6>
+                                                <span>
+                                                <p><a href='http://docs.geonode.org/#for-administrators'>Start Here</a></p>
+                                                </span>
                                             </li>
                                         </ul>
                                     </div>
