--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="span4">
                         <div class="box box-users">
                             <header class="box-header">
-                                <h2><a href="#">For Users</a></h2>
+                                <h2><a href="http://docs.geonode.org/en/latest/index.html#for-users">For Users</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Browse and search for geospatial data layers and web services</li>
@@ -72,7 +72,7 @@
                     <div class="span4">
                         <div class="box box-devs">
                             <header class="box-header">
-                                <h2><a href="#">For Developers</a></h2>
+                                <h2><a href="http://docs.geonode.org/en/latest/index.html#for-developers">For Developers</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Developed with Django</li>
@@ -86,7 +86,7 @@
                     <div class="span4">
                         <div class="box box-admins">
                             <header class="box-header">
-                                <h2><a href="#">For Admins</a></h2>
+                                <h2><a href="http://docs.geonode.org/en/latest/index.html#for-administrators">For Admins</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Complete framework for OGC compliant geospatial web services</li>
