--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
                                                 <p>$ geonode createsuperuser</p>
                                                 </span>
                                             </li>
+                                            <li class="num">
+                                                <div class="num">3</div>
+                                                <h6>Read the Admin docs</h6>
+                                                <span>
+                                                <p><a href='http://docs.geonode.org/#for-administrators'>Start Here</a></p>
+                                                </span>
+                                            </li>
                                             <li class="last">
                                                 <div class="num">3</div>
                                                 <h6>Import your data</h6>
