Some small edits to dev.html

--- a/dev.html
+++ b/dev.html
@@ -40,7 +40,7 @@
           <a href="/release">Download</a>
         </li>
         <li>
-          <a href="/trac">Issue Tracker</a>
+          <a href="https://github.com/geonode/geonode/issues">Issue Tracker (on GitHub)</a>
         </li>
         <li>
           <a href="https://github.com/GeoNode/geonode">Source Code (on GitHub)</a>
@@ -69,9 +69,6 @@
         </li>
         <li>
           <a href="http://geoserver.org/">GeoServer</a> - Standards based server for geospatial information
-        </li>
-        <li>
-          <a href="http://geonetwork-opensource.org/">GeoNetwork</a> - A catalog to manage spatially-referenced resources
         </li>
       </ul>
       <h2>
