--- a/dev.html
+++ b/dev.html
@@ -1,30 +1,39 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-  <head>
-    <title>
-      GeoNode Developer Resources
-    </title>
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-    <style type="text/css">
-  body {
-        text-align: left;
-        font-size: 13px;
-        font-family: Tahoma, 'Lucida Sans Unicode', 'Lucida Grande', Verdana, sans-serif;
-      }
-      div#container {
-        margin: 50px auto !important;
-        float: none !important;
-        padding: 20px !important;
-        width: 750px;
-      }
-      h2, h3, p, ul, ol {
-        margin: 20px 0;
-        list-style: none;
-      }
-    </style>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <title>GeoNode</title>
+        <link rel="shortcut icon" href="static/img/favicon.ico" />
+        <meta name='description' content='GeoNode'/>
+        <meta name='keywords' content='GeoNode'/>
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+        <link rel='stylesheet' href='static/css/site.css' type='text/css' media='all' />
+        <!-- HTML5 shim, for IE6-8 support of HTML elements -->
+        <!--[if lt IE 9]>
+            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+
+        <script type="text/javascript" src="static/js/jquery.js"></script>
+        <script type="text/javascript" src="static/js/sequence.jquery-min.js"></script>
+    </head>
+    <body>
+        <header class="main">
+            <div class="container">
+                <div class="row">
+                    <div class="span6">
+                        <h1><a class="brand" href="#">GeoNode</a></h1>
+                    </div>
+                    <div class="span6">
+                        <div>
+                            <a href="https://github.com/GeoNode/geonode/blob/dev/README" class="btn btn-success">Install GeoNode Now</a>
+                            <a target="_blank" href="http://ui.dev.geonode.org/" class="btn btn-warning">Try the Demo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <section class="body">
     <div id="container">
       <h1>
         <a href="http://geonode.org/"><img src="/static/img/GeoNode-logo.png" alt="GeoNode Developer Resources" title="GeoNode Developer Resources"></a>
@@ -95,5 +104,22 @@
         The data provided in a GeoNode is served using open standards endorsed by the <a href="http://opengeospatial.org/">Open Geospatial Consortium</a>; in particular, WMS (Web Mapping Service) is used for accessing maps and WFS (the Web Feature Service) is used for accessing data. You can use these services in your own applications using libraries such as OpenLayers, GeoTools, and OGR (all of which are open-source software and available at zero cost).
       </p>
     </div>
-  </body>
+                <section class="btm">
+                    <div class="row">
+                        <div class="span6">
+                          <p>This <a href="http://github.com/geonode/geonode.github.com/">Website</a> is <a href='http://creativecommons.org/licenses/by-sa/2.0/'>CC by SA 2012.</a> - <a href='https://github.com/GeoNode/geonode/blob/master/AUTHORS'>GeoNode Contributors.</a> Designed by <a href="http://www.spatialdev.com/">Spatial Dev</a></p>
+                        </div>
+                        <div class="span6">
+                            <div class="pull-right social">
+                                <a href="http://github.com/geonode/" class="gh" target="_blank">GitHub</a>
+                                <a href="https://twitter.com/GeoNode" class="tw" target="_blank">Twitter</a>
+                                <a href="https://plus.google.com/u/1/b/100587124776656797019/" class="gp" target="_blank">Google+</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </footer>
+<a href="https://github.com/GeoNode/geonode/tree/dev"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    </body>
 </html>
