--- a/dev.html
+++ b/dev.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1><a class="brand" href="#">GeoNode</a></h1>
+                        <h1><a class="brand" href="/">GeoNode</a></h1>
                     </div>
                     <div class="span6">
                         <div>
@@ -35,9 +35,6 @@
         </header>
         <section class="body">
     <div id="container">
-      <h1>
-        <a href="http://geonode.org/"><img src="/static/img/GeoNode-logo.png" alt="GeoNode Developer Resources" title="GeoNode Developer Resources"></a>
-      </h1>
       <p>
         GeoNode is open source software that provides an open service. We encourage you to build new applications using its components and the resources it provides. This page is a starting point for developers interesting in taking full advantage of the GeoNode. It also includes links to the project's source code so anyone can build and customize their own GeoNode.
       </p>
@@ -104,6 +101,10 @@
         The data provided in a GeoNode is served using open standards endorsed by the <a href="http://opengeospatial.org/">Open Geospatial Consortium</a>; in particular, WMS (Web Mapping Service) is used for accessing maps and WFS (the Web Feature Service) is used for accessing data. You can use these services in your own applications using libraries such as OpenLayers, GeoTools, and OGR (all of which are open-source software and available at zero cost).
       </p>
     </div>
+    </section>
+        <footer class="footer">
+            <div class="container">
+                <section class="important-links">
                 <section class="btm">
                     <div class="row">
                         <div class="span6">
