Change link to dev.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="span4">
                         <div class="box box-devs">
                             <header class="box-header">
-                                <h2><a href="http://docs.geonode.org/en/latest/index.html#for-developers">For Developers</a></h2>
+                                <h2><a href="dev.html">For Developers</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Developed with Django</li>
