Change jquery link

--- a/dev.html
+++ b/dev.html
@@ -91,7 +91,7 @@
           <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> - Front End Framework 
         </li>
         <li>
-          <a href="http://geoext.org/">jQuery</a> - Javascript Library
+          <a href="http://jquery.org/">jQuery</a> - Javascript Library
         </li>
       </ul>
       <h2>
