Fix Links in dev.html

--- a/dev.html
+++ b/dev.html
@@ -79,7 +79,7 @@
           <a href="http://geowebcache.org/">GeoWebCache</a> - Cache engine for Web Map Tiles
         </li>
         <li>
-          <a href="http://pycsw.org/">GeoExt</a> - OGC CSW server implementation 
+          <a href="http://pycsw.org/">pycsw</a> - OGC CSW server implementation 
         </li>
         <li>
           <a href="http://openlayers.org/">OpenLayers</a> - Pure JavaScript library powering the maps of GeoExt
