editorial fixes/update links

--- a/dev.html
+++ b/dev.html
@@ -98,7 +98,7 @@
         What are OGC Services?
       </h2>
       <p>
-        The data provided in a GeoNode is served using open standards endorsed by the <a href="http://opengeospatial.org/">Open Geospatial Consortium</a>; in particular, WMS (Web Mapping Service) is used for accessing maps and WFS (the Web Feature Service) is used for accessing data. You can use these services in your own applications using libraries such as OpenLayers, GeoTools, and OGR (all of which are open-source software and available at zero cost).
+        The data provided in a GeoNode is served using open standards endorsed by the <a href="http://opengeospatial.org/">Open Geospatial Consortium</a>; in particular, <a href="http://www.opengeospatial.org/standards/wms">WMS</a> (Web Map Service) is used for accessing maps and <a href="http://www.opengeospatial.org/standards/wfs">WFS</a> (Web Feature Service) is used for accessing data. You can use these services in your own applications using libraries such as <a href="http://openlayers.org">OpenLayers</a>, <a href="http://geotools.org">GeoTools</a>, and <a href="http://gdal.org/ogr">OGR</a> (all of which are open-source software and available at zero cost).
       </p>
     </div>
     </section>
