--- a/feature_detail.html
+++ b/feature_detail.html
@@ -93,7 +93,7 @@
                         </article>
 
                         <div class="box2">
-                            <h4>Don't take our word for it, see yourself.</h4>
+                            <h4><a href="#">Don't take our word for it, see yourself.</a></h4>
                         </div>
                     </div>
                     <div class="span4 offset1">
