--- a/pages/features.html
+++ b/pages/features.html
@@ -50,7 +50,7 @@
                     <div class="span7 number one">
                         <div class="highlighted-box">
                             <h2>Post<strong>GIS</strong></h2>
-                            <h4>A robust spacial database system.</h4>
+                            <h4>A robust spatial database system.</h4>
                             <ul class="unstyled">
                                 <li>Spatial database overview</li>
                                 <li>Create a spatial database</li>
